--- a/style.css
+++ b/style.css
@@ -15,14 +15,21 @@ html, body {
   height: 50px;
   position: absolute;
   top: 0px;
-  background-color: #222222;
+  background-color: #588c3a;
   text-align: center;
   color: #dddddd;
-  font-size: 18px;
+  text-shadow: 2px 2px #333;
+  font-size: 20px;
   line-height: 50px;
   font-family: "Trebuchet MS";
+
 }
 
+#button {
+  border: none;
+  font-size: 20px;
+  font-style: "Trebuchet MS";
+}
 .container {
   display: flex;
   position: absolute;
@@ -32,6 +39,7 @@ html, body {
   bottom: 50px;
   left: 50px;
 }
+
 
 .box-minmax {
   margin-top: 30px;
@@ -68,7 +76,7 @@ html, body {
 
 .rs-range::-moz-range-track {
   width: 100%;
-  height: 1px;
+  height: 10px;
   cursor: pointer;
   box-shadow: none;
   background: #222222;
@@ -136,4 +144,15 @@ html, body {
   font-size: 20px;
   letter-spacing: 0.07em;
   margin-top: -10px;
+}
+
+.button {
+  background-color: #588c3a;
+  border: none;
+  color:#ddd;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
