--- a/style.css
+++ b/style.css
@@ -25,11 +25,7 @@ html, body {
 
 }
 
-#button {
-  border: none;
-  font-size: 20px;
-  font-style: "Trebuchet MS";
-}
+
 .container {
   display: flex;
   position: absolute;
@@ -146,13 +142,31 @@ html, body {
   margin-top: -10px;
 }
 
-.button {
+.button1 {
+  position: absolute;
+  right: 25px;
+  top: 100px;
+  font-size: 16px;
+  font-style: "Trebuchet MS";
+  background:;
+  border: none;
+  color:#ddd;
+  padding: 15px 32px;
+  text-align: center;
+
+  
+ 
+}
+
+.button2{
+  position: absolute;
+  right: 25px;
+  top: 160px;
+  font-size: 16px;
+  font-style: "Trebuchet MS";
   background-color: #588c3a;
   border: none;
   color:#ddd;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
 }
