--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ html, body {
   top: 100px;
   font-size: 16px;
   font-style: "Trebuchet MS";
-  background:;
+  background-color: #588c3a;
   border: none;
   color:#ddd;
   padding: 15px 32px;
