--- a/style.css
+++ b/style.css
@@ -18,13 +18,10 @@ html, body {
   background-color: #588c3a;
   text-align: center;
   color: #dddddd;
-  text-shadow: 2px 2px #333;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 50px;
   font-family: "Trebuchet MS";
-
 }
-
 
 .container {
   display: flex;
@@ -35,7 +32,6 @@ html, body {
   bottom: 50px;
   left: 50px;
 }
-
 
 .box-minmax {
   margin-top: 30px;
@@ -72,7 +68,7 @@ html, body {
 
 .rs-range::-moz-range-track {
   width: 100%;
-  height: 10px;
+  height: 1px;
   cursor: pointer;
   box-shadow: none;
   background: #222222;
@@ -169,4 +165,11 @@ html, body {
   color:#ddd;
   padding: 15px 32px;
   text-align: center;
+}
+.sidebar{
+  top:100px!important;
+}
+
+.fa{
+  line-height: 2!important;
 }
