--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ html, body {
   letter-spacing: 0.07em;
   margin-top: -10px;
 }
-
+/*
 .button1 {
   position: absolute;
   right: 25px;
@@ -166,10 +166,14 @@ html, body {
   padding: 15px 32px;
   text-align: center;
 }
+*/
 .sidebar{
   top:100px!important;
 }
 
 .fa{
   line-height: 2!important;
+}
+.sidebar-tabs{
+  background-color:#588c3a!important;
 }
