--- a/style.css
+++ b/style.css
@@ -177,3 +177,30 @@ html, body {
 .sidebar-tabs{
   background-color:#588c3a!important;
 }
+
+.info { 
+  padding: 6px 8px; 
+  font: 14px/16px Arial, Helvetica, sans-serif; 
+  background: rgba(20,20,20,0.8); 
+  box-shadow: 0 0 15px rgba(0,0,0,0.2); 
+  border-radius: 5px; 
+} 
+
+.info h4 { 
+  margin: 0 0 5px; 
+  color: #777; 
+}
+
+.legend { 
+  text-align: left; 
+  line-height: 28px; 
+  color: #ddd; 
+} 
+
+.legend i { 
+  width: 28px; 
+  height: 25px; 
+  float: left; 
+  margin-right: 10px; 
+  opacity: 0.8; 
+}
