--- a/style.css
+++ b/style.css
@@ -195,6 +195,8 @@ html, body {
   text-align: left; 
   line-height: 28px; 
   color: #ddd; 
+  margin-right:25px!important;
+  margin-bottom:25px!important;
 } 
 
 .legend i { 
@@ -203,4 +205,9 @@ html, body {
   float: left; 
   margin-right: 10px; 
   opacity: 0.8; 
+  border-radius:50%;
+}
+
+.leaflet-control-layers{
+  top:50px!important;
 }
