--- a/gmaps-sidebar.css
+++ b/gmaps-sidebar.css
@@ -52,7 +52,7 @@
     .sidebar-tabs > li, .sidebar-tabs > ul > li {
       width: 100%;
       height: 40px;
-      color: #666;
+      color: #dddddd;
       font-size: 12pt;
       overflow: hidden;
       transition: all 80ms; }
@@ -61,13 +61,13 @@
         background-color: #fff9e6; }
       .sidebar-tabs > li.active, .sidebar-tabs > ul > li.active {
         color: #000;
-        background-color: #febf00; }
-      .sidebar-tabs > li.disabled, .sidebar-tabs > ul > li.disabled {
+        background-color: #588c3a; }
+      .sidebar-tabs > li.disabled, .sidebar-tabs > ul > li.disable{
         color: rgba(102, 102, 102, 0.4); }
         .sidebar-tabs > li.disabled:hover, .sidebar-tabs > ul > li.disabled:hover {
           background: transparent; }
-        .sidebar-tabs > li.disabled > a, .sidebar-tabs > ul > li.disabled > a {
-          cursor: default; }
+          .sidebar-tabs > li.disabled > a, .sidebar-tabs > ul > li.disabled > a {
+            cursor: auto; }
       .sidebar-tabs > li > a, .sidebar-tabs > ul > li > a {
         display: block;
         width: 100%;
@@ -83,7 +83,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: #CAE8D2;
   overflow-x: hidden;
   overflow-y: auto; }
   .sidebar-left .sidebar-content {
@@ -119,8 +119,8 @@
   padding: 0 20px;
   line-height: 40px;
   font-size: 14.4pt;
-  color: #000;
-  background-color: #febf00; }
+  color: #dddddd;
+  background-color: #588c3a; }
   .sidebar-right .sidebar-header {
     padding-left: 40px; }
 
