--- a/style.css
+++ b/style.css
@@ -24,14 +24,16 @@ html, body {
   font-family: "Trebuchet MS";
 }
 
+#slider-container{
+  display: none;
+}
 .container {
-  display: flex;
   position: absolute;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   bottom: 50px;
-  left: 50px;
+  left: 600px;
 }
 
 .box-minmax {
@@ -141,36 +143,7 @@ html, body {
   letter-spacing: 0.07em;
   margin-top: -10px;
 }
-/*
-.button1 {
-  position: absolute;
-  right: 25px;
-  top: 100px;
-  font-size: 16px;
-  font-style: "Trebuchet MS";
-  background-color: #588c3a;
-  border: none;
-  color:#ddd;
-  padding: 15px 32px;
-  text-align: center;
 
-  
- 
-}
-
-.button2{
-  position: absolute;
-  right: 25px;
-  top: 160px;
-  font-size: 16px;
-  font-style: "Trebuchet MS";
-  background-color: #588c3a;
-  border: none;
-  color:#ddd;
-  padding: 15px 32px;
-  text-align: center;
-}
-*/
 .sidebar{
   top:100px!important;
 }
