--- a/gmaps-sidebar.css
+++ b/gmaps-sidebar.css
@@ -83,6 +83,8 @@
   position: absolute;
   top: 0;
   bottom: 0;
+  font-size:18px;
+  color:#222;
   background-color: #CAE8D2;
   overflow-x: hidden;
   overflow-y: auto; }
