--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ html, body {
   font-size: 18px;
   line-height: 50px;
   font-family: "Trebuchet MS";
+  margin-left:0;
+  margin-right:0;
 }
 
 #slider-container{
@@ -271,3 +273,18 @@ html, body {
 .leaflet-control-zoom {
   top:50px!important;
 }
+/*
+@media screen and (max-width: 600px) {
+  #title{
+    height:70px!important;
+    font-size:120%!important;
+}
+.leaflet-control-zoom {
+  top:75px!important;
+}
+#sidebar{
+  height:300px!important;
+}
+
+}
+*/
