--- a/css/style.css
+++ b/css/style.css
@@ -273,11 +273,11 @@ html, body {
 .leaflet-control-zoom {
   top:50px!important;
 }
-/*
+
 @media screen and (max-width: 600px) {
   #title{
     height:70px!important;
-    font-size:120%!important;
+    font-size:90%!important;
 }
 .leaflet-control-zoom {
   top:75px!important;
@@ -285,6 +285,9 @@ html, body {
 #sidebar{
   height:300px!important;
 }
+.leaflet-control-attribution{
+  height:60%;
+  
+}
 
 }
-*/
