--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html, body {
   margin: 0;
   font-family: "Source Sans Pro"!important;
+  overflow-x: hidden;
 }
 
 #map {
@@ -287,7 +288,7 @@ html, body {
 }
 .leaflet-control-attribution{
   height:60%;
-  
+
 }
 
 }
