--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,7 @@ html, body {
   top:50px!important;
 }
 
+/*
 @media screen and (max-width: 600px) {
   #title{
     height:70px!important;
@@ -292,3 +293,4 @@ html, body {
 }
 
 }
+*/
