--- a/css/gmaps-sidebar.css
+++ b/css/gmaps-sidebar.css
@@ -83,6 +83,7 @@
 
     .guzik {
       transition-duration: 0.4s;
+      cursor:pointer;
       background-color: #588c3a; 
       color: #222;
       border-bottom: solid;
@@ -112,6 +113,7 @@
 
     .guzik2 {
       transition-duration: 0.4s;
+      cursor:pointer;
       background-color:#588c3a; 
       color: #222;
       border: none;
