--- a/css/gmaps-sidebar.css
+++ b/css/gmaps-sidebar.css
@@ -23,7 +23,7 @@
       width: 460px; } }
 
 .sidebar-left {
-  left: 0; }
+  left: 0px; }
   @media (min-width: 768px) {
     .sidebar-left {
       left: 10px; } }
@@ -199,7 +199,7 @@
     left: 0; }
 
 .sidebar-left ~ .sidebar-map {
-  margin-left: 40px; }
+  margin-left: 0px; }
   @media (min-width: 768px) {
     .sidebar-left ~ .sidebar-map {
       margin-left: 0; } }
