--- a/css/style.css
+++ b/css/style.css
@@ -342,14 +342,22 @@ html, body {
 	opacity:0.6;
 }
 
-
+#sidebar {
+  top:100px;
+}
 
 
 @media screen and (max-width: 600px) {
 
 
 #sidebar{
-  top:360px!important;
+  top: unset!important;
+  height:360px!important;
+  bottom:0px!important;
+}
+.leaflet-control-attribution {
+  margin-left:40px!important;
+  font-size:80%!important;
 }
 
 }
