--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   font-family: "Source Sans Pro"!important;
   overflow-x: hidden;
+  overflow-y: hidden;
   background-color:#588c3a;
 }
 
