--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ html, body {
   font-family: "Trebuchet MS";
   margin-left:0;
   margin-right:0;
+  box-shadow: 0px 14px 25px 0px #222;
 }
 
 #slider-container{
