--- a/css/style.css
+++ b/css/style.css
@@ -364,3 +364,36 @@ html, body {
     }
 
 }
+
+
+.guzik {
+  transition-duration: 0.4s;
+  cursor:pointer;
+  background-color: #588c3a; 
+  color: #222;
+  border-bottom: solid;
+  border-width: thin;
+  padding: 5px 10px;
+  margin-left: 24%;
+  width: 50%;
+  text-align: center;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.guzik:hover {
+  background-color: #fff; 
+  color: #222;
+  border: none;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
