--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html, body {
   font-family: "Trebuchet MS";
   margin-left:0;
   margin-right:0;
-  box-shadow: 0px 14px 25px 0px #222;
+  box-shadow: 0px 7px 25px 0px #222;
 }
 
 #slider-container{
@@ -397,4 +397,33 @@ html, body {
   font-weight: bold;
 }
 
+#tabela_zespoly {
+	margin:auto;
+	height:120px;
+	width:300px;
+	color:white!important;
+	font-size:14px;
+	height:140px;
+}
+
+
+table td#komorka {
+	font-weight:bold;
+}
+table td#komorka2 {
+	padding-left:10px;
+}
+
+caption {
+font-size:20px;
+font-weight:bold;
+text-shadow:3px 3px 2px #999; 
+	-webkit-text-stroke: 0.6px #ccc;
+padding-bottom:10px;
+text-align:center;
+}
+
+table td#komorka_zespoly {
+	font-weight:bold;
+}
 
