--- a/css/style.css
+++ b/css/style.css
@@ -427,15 +427,15 @@ table td#komorka_zespoly {
 	font-weight:bold;
 }
 
-#suwak {
+.suwak {
 	display:block;
 	width:330px;
-	height:170px;
+	height:100px;
 	text-align:center;
 	margin-top:20px;
 }
 
-#opacity-slider {
+.opacity-slider {
 	-webkit-appearance: none;
 	width: 250px;
 	height: 5px;
@@ -447,10 +447,10 @@ table td#komorka_zespoly {
 	margin-left:15px;
 	margin-top:10px;
 }
-#opacity-slider:hover {
+.opacity-slider:hover {
 	opacity: 1;
 }
-#opacity-slider::-webkit-slider-thumb {
+.opacity-slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 12px;
@@ -458,7 +458,7 @@ table td#komorka_zespoly {
 	background: #588c3a;
 	cursor: pointer;
   }
-  #opacity-slider::-moz-range-thumb {
+  .opacity-slider::-moz-range-thumb {
 	width: 25px;
 	height: 25px;
 	background: #588c3a;
