--- a/css/style.css
+++ b/css/style.css
@@ -397,13 +397,15 @@ html, body {
   font-weight: bold;
 }
 
+sup{
+  font-size:70%;
+}
 #tabela_zespoly {
 	margin:auto;
 	height:120px;
-	width:300px;
+	width:250px;
 	color:white!important;
 	font-size:14px;
-	height:140px;
 }
 
 
@@ -415,7 +417,7 @@ table td#komorka2 {
 }
 
 caption {
-font-size:20px;
+font-size:16px;
 font-weight:bold;
 text-shadow:3px 3px 2px #999; 
 	-webkit-text-stroke: 0.6px #ccc;
