--- a/css/style.css
+++ b/css/style.css
@@ -368,34 +368,38 @@ html, body {
 
 
 .guzik {
+  text-align: center!important;
   transition-duration: 0.4s;
   cursor:pointer;
-  background-color: #588c3a; 
-  color: #222;
-  border-bottom: solid;
-  border-width: thin;
-  padding: 5px 10px;
-  margin-left: 24%;
-  width: 50%;
-  text-align: center;
-  text-decoration: none;
-  position: relative;
-  display: block;
-  font-size: 20px;
+  background-color: #588c3a;
+  border: #222 solid;
+  margin-top: 30px;
+  padding:  20px;
+  color: #fff;
+  display: inline-flex;
+  font-size: 16px;
+  cursor: pointer;
+  width: 20%;
+  height: 5%;
   font-weight: bold;
 }
 
 .guzik:hover {
+  text-align: center!important;
   background-color: #fff; 
   color: #222;
+  border: #222 solid;
   border: none;
-  padding: 5px 10px;
-  text-align: center;
-  text-decoration: none;
-  display: block;
-  font-size: 20px;
+  margin-top: 30px;
+  padding: 20px;
+  display:inline-flex;
+  font-size: 16px;
+  cursor: pointer;
+  width: 20%;
+  height: 5%;
   font-weight: bold;
 }
+
 
 sup{
   font-size:70%;
@@ -434,7 +438,7 @@ table td#komorka_zespoly {
 	width:330px;
 	height:100px;
 	text-align:center;
-	margin-top:20px;
+	margin-top:40px;
 }
 
 .opacity-slider {
