--- a/css/style.css
+++ b/css/style.css
@@ -379,10 +379,10 @@ html, body {
   display: block;
   font-size: 16px;
   cursor: pointer;
-  width: 20%;
   height: 5%;
   font-weight: bold;
   float:left;
+  margin: 5px;
 }
 
 .guzik:hover {
@@ -396,10 +396,10 @@ html, body {
   display:block;
   font-size: 16px;
   cursor: pointer;
-  width: 20%;
   height: 5%;
   font-weight: bold;
   float:left;
+  margin: 5px;
 }
 
 
@@ -425,7 +425,6 @@ table td#komorka2 {
 caption {
 font-size:16px;
 font-weight:bold;
-text-shadow:3px 3px 2px #999; 
 	-webkit-text-stroke: 0.6px #ccc;
 padding-bottom:10px;
 text-align:center;
