--- a/css/style.css
+++ b/css/style.css
@@ -426,11 +426,12 @@ html, body {
   margin-left: 20px;
 }
 
-.logo{
+#logo{
   padding-top: 5%;
-  padding-left: 25% ;
+  padding-left: 25%;
+  -webkit-filter: drop-shadow(3px 3px 8px rgba(22, 22, 22, 0.7));
+  filter: drop-shadow(3px 3px 8px rgba(22, 22, 22, 0.7));
 }
-
 sup{
   font-size:70%;
 }
