--- a/css/style.css
+++ b/css/style.css
@@ -585,3 +585,13 @@ a:link {
 a:visited {
   text-decoration: none;
 }
+.my-label {
+  font-size:14px;
+  font-weight: 400;
+  opacity:0.7;
+  border:1px solid #222222;
+  color:#dddddd!important;
+  background-color:#222222!important;
+  position: absolute;
+  /* Use color, background, set margins for offset, etc */
+}
